--- a/package.json
+++ b/package.json
@@ -2,10 +2,7 @@
   "name": "react-hooks-component-props-mini-project",
   "version": "0.1.0",
   "private": true,
-  "jest": {
-    "transform": {
-      "^.+\\.js$": "babel-jest"    }
-  },
+  "jest": {},
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -13,15 +10,15 @@
   },
   "devDependencies": {
     "@learn-co-curriculum/jest-learn-reporter": "^0.1.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.1.10",
     "mocha": "^8.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "echo \".results.json\" && react-scripts test --reporters=@learn-co-curriculum/jest-learn-reporter --reporters=default --watchAll",
+    "test": "echo \".results.json\" && react-scripts test --reporters=default --watchAll",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
